UtahLiveDataTest/src/objects/WBSTaskScheduleLink__c.object
<CustomObject>
    <description>[Business] This object is used for storing the details of WBS Task in WBS Task Schedule</description>
    <fields>
        <fullName>SourceTask__c</fullName>
        <label>Source Task</label>
        <referenceTo>WBSTaskSchedule__c</referenceTo>
        <relationshipLabel>WBS Task Schedule Links</relationshipLabel>
        <relationshipName>WBS_Task_Schedule_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TargetTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Task</label>
        <referenceTo>WBSTaskSchedule__c</referenceTo>
        <relationshipLabel>WBS Task Schedule Links (Target task)</relationshipLabel>
        <relationshipName>WBS_Task_Schedule_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>WBS Task Schedule Link</label>
    <nameField>
        <displayFormat>WBSLink - {0000}</displayFormat>
        <label>WBS Task Schedule Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WBS Task Schedule Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>